--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "1.13.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "passport": "0.6.0",
+    "passport-github2": "0.1.12",
     "pug": "3.0.2"
   },
   "engines": {
-    "node": ">=16"    
+    "node": ">=16"
   }
 }
