--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,12 @@
 name: deploy santaku application
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - closed
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: deploy santaku application
@@ -28,7 +25,6 @@ jobs:
             sudo systemctl restart php81-php-fpm.service
 
   deploy-other:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: deploy santaku.other application
@@ -47,7 +43,6 @@ jobs:
             sudo systemctl restart php81-php-fpm.service
 
   deploy-office:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: deploy santaku.office application
@@ -66,7 +61,6 @@ jobs:
             sudo systemctl restart php81-php-fpm.service
 
   deploy-souzoku:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: deploy santaku.souzoku application
