--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=162dc9d8f967bfae20399f59d7bbd3eb",
+    "/css/app.css": "/css/app.css?id=829d0b34ff201a4502fd6ca0b7aa37ee"
 }
