--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=162dc9d8f967bfae20399f59d7bbd3eb",
-    "/css/app.css": "/css/app.css?id=96c875c1a7747c56246081bd32317fdf"
+    "/js/app.js": "/js/app.js",
+    "/js/example.js": "/js/example.js",
+    "/css/app.css": "/css/app.css"
 }
