--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/example.js": "/js/example.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=162dc9d8f967bfae20399f59d7bbd3eb",
+    "/js/example.js": "/js/example.js?id=9f73e36163448599799c0ba369b82b17",
+    "/css/app.css": "/css/app.css?id=8f32784ed90be2670497cfa2ee98bb4b"
 }
