--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^9.21",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.24"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
